--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ section.content {
 }
 
 section.image img {
-    border-radius: 1%;
+    border-radius: 0 1% 0 1%;
 }
 
 
@@ -48,7 +48,7 @@ section.mp p {
     line-height: 1.4em;
     color: hsla(0, 0%, 100%, 0.6);
     font-family: 'Lexend Deca', sans-serif;
-    margin: 0 1% 9%;
+    margin: 0 1% 17%;
 
 }
 
@@ -146,7 +146,14 @@ section.image {
 }
 
 
-
+div.overlay {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    background-color: hsl(277deg 75% 34% / 64%);
+    width: 540px;
+    height: 446px;
+}
 
 
 
