Solve (iphone 4) & some devices responsive close issue #4

--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,7 @@ ul li {
 
 @media (height: 375px) and (orientation: landscape) {
 	main {
-		margin-top: 30% !important;
+		margin-top: 34% !important;
 	}
 
 }	
@@ -365,3 +365,7 @@ ul li {
 
 @media (min-width: 1200px) {
 */
+
+
+
+git add
